--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp==3.7.4.post0
 alabaster==0.7.12
 altgraph==0.17
-anaconda-client==1.7.2
+anaconda-client
 anaconda-navigator==1.9.12
 anaconda-project==0.8.3
 anyio==2.2.0
