--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp==3.7.4.post0
 alabaster==0.7.12
 altgraph==0.17
 anaconda-client
-anaconda-navigator==1.9.12
+anaconda-navigator
 anaconda-project==0.8.3
 anyio==2.2.0
 appdirs==1.4.4
