--- a/requirements.txt
+++ b/requirements.txt
@@ -1,314 +1,5 @@
-aiohttp==3.7.4.post0
-alabaster==0.7.12
-altgraph==0.17
-anaconda-client
-anaconda-navigator
-anaconda-project==0.8.3
-anyio==2.2.0
-appdirs==1.4.4
-argh==0.26.2
-argon2-cffi==20.1.0
-asn1crypto==1.4.0
-astroid @ file:///C:/ci/astroid_1592487315634/work
-astropy==4.2
-async-generator==1.10
-async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs==20.3.0
-autobahn==21.3.1
-autopep8 @ file:///tmp/build/80754af9/autopep8_1592412889138/work
-Babel==2.9.0
-backcall==0.2.0
-backports.functools-lru-cache==1.6.3
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-bcrypt==3.2.0
-beautifulsoup4==4.9.3
-bitarray @ file:///C:/ci/bitarray_1594751093906/work
-bkcharts==0.2
-bleach==3.3.0
-bokeh @ file:///C:/ci/bokeh_1593178781838/work
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-cachetools==4.2.2
-camelot-py==0.8.2
-certifi==2020.12.5
-cffi==1.14.5
-chardet==3.0.4
-click==7.1.2
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1594141588948/work
-clyent==1.2.2
-colorama==0.4.4
-comtypes==1.1.9
-conda==4.8.3
-conda-build==3.18.11
-conda-package-handling==1.7.0
-conda-verify==3.4.2
-configparser==5.0.2
-contextlib2==0.6.0.post1
-cryptography==3.4.6
-cycler==0.10.0
-Cython @ file:///C:/ci/cython_1594829190914/work
-cytoolz==0.10.1
-dask @ file:///tmp/build/80754af9/dask-core_1594156306305/work
-decorator==4.4.2
-defusedxml==0.7.1
-diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
-distlib==0.3.1
-distributed @ file:///C:/ci/distributed_1594742844291/work
-distro==1.5.0
-docutils==0.16
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-flake8==3.9.0
-Flask==1.1.2
-Flask-MySQLdb==0.2.0
-fsspec==0.8.7
-future==0.18.2
-gevent @ file:///C:/ci/gevent_1593005471151/work
-ghostscript==0.7
-glob2==0.7
-gmpy2==2.0.8
-google-api-core==1.28.0
-google-api-python-client==2.5.0
-google-auth==1.30.1
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.4
-googleapis-common-protos==1.53.0
-graphviz==0.16
-greenlet==1.0.0
+asgiref==3.4.1
+Django==3.2
 gunicorn==20.1.0
-h5py==3.2.1
-HeapDict==1.0.1
-helpdev==0.7.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-httplib2==0.19.1
-hyperlink==21.0.0
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
-imagesize==1.2.0
-importlib-metadata @ file:///C:/ci/importlib-metadata_1593446511143/work
-iniconfig==1.1.1
-intervaltree @ file:///tmp/build/80754af9/intervaltree_1594361675072/work
-ipykernel @ file:///C:/ci/ipykernel_1594745408489/work/dist/ipykernel-5.3.2-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1593447482397/work
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi @ file:///C:/ci/jedi_1592833825077/work
-Jinja2==2.11.3
-joblib @ file:///tmp/build/80754af9/joblib_1594236160679/work
-json5==0.9.5
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1594826976318/work
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyter-packaging==0.7.12
-jupyter-server==1.5.1
-jupyter-server-proxy==3.0.2
-jupyterlab==3.0.12
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.3.0
-jupyterlab-widgets==1.0.0
-keyring @ file:///C:/ci/keyring_1593109799227/work
-kiwisolver==1.3.1
-lazy-object-proxy==1.4.3
-libarchive-c==2.9
-llvmlite==0.33.0+1.g022ab0f
-locket==0.2.0
-lxml @ file:///C:/ci/lxml_1594822774489/work
-MarkupSafe==1.1.1
-matplotlib @ file:///C:/ci/matplotlib-base_1592837548929/work
-mccabe==0.6.1
-menuinst==1.4.16
-mistune==0.8.4
-mkl-fft==1.1.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mock==4.0.3
-more-itertools==8.7.0
-mpmath==1.1.0
-msgpack==1.0.2
-multidict==5.1.0
-multipledispatch==0.6.0
-mysql-connector-python==8.0.23
-mysqlclient==2.0.3
-navigator-updater==0.2.1
-nbclassic==0.2.6
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.5.1
-networkx @ file:///tmp/build/80754af9/networkx_1594377231366/work
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-nose==1.3.7
-notebook==6.3.0
-numba==0.50.1
-numexpr==2.7.3
-numpy==1.20.1
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1594166760263/work
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.5.1.48
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1594167385094/work
-packaging==20.9
-panda==0.3.1
-pandas @ file:///C:/ci/pandas_1592833613419/work
-pandocfilters==1.4.3
-paramiko==2.7.2
-parso==0.7.1
-partd==1.1.0
-password-strength==0.0.3.post2
-path==15.1.2
-pathlib2==2.3.5
-pathtools==0.1.2
-patsy==0.5.1
-pdfminer.six==20201018
-pefile==2021.5.24
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow @ file:///C:/ci/pillow_1594298230227/work
-pkginfo==1.7.0
-pluggy==0.13.1
-ply==3.11
-prometheus-client==0.9.0
-prompt-toolkit==3.0.18
-protobuf==3.15.8
-psutil==5.8.0
-ptyprocess==0.7.0
-py @ file:///tmp/build/80754af9/py_1593446248552/work
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.7.0
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycurl==7.43.0.5
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1592848020240/work
-pydot==1.4.2
-pyerfa==1.7.2
-pyflakes==2.3.1
-Pygments==2.8.1
-pyinstaller==4.3
-pyinstaller-hooks-contrib==2021.2
-pylint @ file:///C:/ci/pylint_1592482039483/work
-PyMySQL==1.0.2
-PyNaCl @ file:///C:/ci/pynacl_1595000047588/work
-pyodbc==4.0.30
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
-pyparsing==2.4.7
-PyPDF2==1.26.0
-pypiwin32==223
-PyQt5==5.15.4
-pyqt5-plugins==5.15.4.2.1.0
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.8.1
-pyqt5-tools==5.15.2.3.0.2
-PyQtWebEngine==5.15.4
-PyQtWebEngine-Qt5==5.15.2
-pyreadline==2.1
-pyrsistent==0.17.3
-PySocks==1.7.1
-pytest==6.2.2
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1594397536060/work
-python-language-server @ file:///C:/ci/python-language-server_1594162130238/work
 pytz==2021.1
-PyWavelets==1.1.1
-pywin32==300
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==22.0.3
-QDarkStyle==2.8.1
-qt5-applications==5.15.2.2.1
-qt5-tools==5.15.2.1.0.1
-QtAwesome==1.0.2
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1592848611704/work
-QtPy==1.9.0
-regex @ file:///C:/ci/regex_1593419644658/work
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
-requests-oauthlib==1.3.0
-rope==0.18.0
-rsa==4.7.2
-Rtree==0.9.7
-ruamel-yaml==0.15.87
-ruamel.yaml.clib==0.2.2
-scikit-image==0.18.1
-scikit-learn @ file:///C:/ci/scikit-learn_1592853510272/work
-scipy @ file:///C:/ci/scipy_1592916963468/work
-seaborn==0.11.1
-selenium==3.141.0
-Send2Trash==1.5.0
-simpervisor==0.4
-simplegeneric==0.8.1
-singledispatch==3.6.1
-sip==6.0.3
-six==1.15.0
-sniffio==1.2.0
-snowballstemmer==2.1.0
-sortedcollections==2.1.0
-sortedcontainers==2.3.0
-soupsieve==2.2.1
-Sphinx @ file:///tmp/build/80754af9/sphinx_1594223420021/work
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1593446360927/work
-spyder @ file:///C:/ci/spyder_1594830825244/work
-spyder-kernels @ file:///C:/ci/spyder-kernels_1594751670175/work
-SQLAlchemy @ file:///C:/ci/sqlalchemy_1593445271541/work
-statsmodels==0.12.2
-sympy @ file:///C:/ci/sympy_1594234545115/work
-tables==3.6.1
-tabula-py==2.2.0
-tblib==1.7.0
-terminado==0.8.3
-testpath==0.4.4
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tifffile==2021.3.17
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
-toolz==0.11.1
-tornado==6.1
-tqdm @ file:///tmp/build/80754af9/tqdm_1593446365756/work
-traitlets==5.0.5
-txaio==21.2.1
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1592847887441/work
-ujson==4.0.2
-unicodecsv==0.14.1
-uritemplate==3.0.1
-urllib3==1.25.11
-virtualenv==20.4.3
-vpython==7.6.1
-watchdog @ file:///C:/ci/watchdog_1593447437088/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-win-inet-pton==1.1.0
-win-unicode-console==0.5
-win10toast==0.9
-wincertstore==0.2
-wrapt==1.12.1
-xlrd==2.0.1
-XlsxWriter==1.3.7
-xlwings==0.23.0
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1593528177422/work
-yarl==1.6.3
-zict==2.0.0
-zipp==3.4.1
-zope.event==4.5.0
-zope.interface==5.3.0
+sqlparse==0.4.1
