--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ Django==3.2
 django-crispy-forms==1.13.0
 django-heroku==0.3.1
 gunicorn==20.1.0
+numpy==1.21.4
 psycopg2==2.9.1
 pytz==2021.1
+scipy==1.7.3
 sqlparse==0.4.1
 whitenoise==5.3.0
